<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cppcia</groupId>
    <artifactId>cppcia</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- region Eclipse CDT -->
        <dependency>
            <groupId>org.eclipse.cdt</groupId>
            <artifactId>core</artifactId>
            <type>jar</type>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/org.eclipse.cdt.core_6.6.0.201812101042.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.eclipse.core</groupId>
            <artifactId>contenttype</artifactId>
            <type>jar</type>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/org.eclipse.core.contenttype_3.7.200.v20181107-1343.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.eclipse.core</groupId>
            <artifactId>jobs</artifactId>
            <type>jar</type>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/org.eclipse.core.jobs_3.10.200.v20180912-1356.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.eclipse.core</groupId>
            <artifactId>resources</artifactId>
            <type>jar</type>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/org.eclipse.core.resources_3.13.200.v20181121-1020.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.eclipse.core</groupId>
            <artifactId>runtime</artifactId>
            <type>jar</type>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/org.eclipse.core.runtime_3.15.100.v20181107-1343.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.eclipse.equinox</groupId>
            <artifactId>common</artifactId>
            <type>jar</type>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/org.eclipse.equinox.common_3.10.200.v20181021-1645.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.eclipse.equinox</groupId>
            <artifactId>preferences</artifactId>
            <type>jar</type>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/org.eclipse.equinox.preferences_3.7.200.v20180827-1235.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.eclipse.equinox</groupId>
            <artifactId>registry</artifactId>
            <type>jar</type>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/org.eclipse.equinox.registry_3.8.200.v20181008-1820.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.eclipse.osgi</groupId>
            <artifactId>main</artifactId>
            <type>jar</type>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/org.eclipse.osgi_3.13.200.v20181130-2106.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.ibm.icu</groupId>
            <artifactId>icu4j</artifactId>
            <version>64.1</version>
        </dependency>
        <!-- endregion Eclipse CDT -->

        <!-- region jCPP -->
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>2.0.1</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>net.sf.jopt-simple</groupId>-->
<!--            <artifactId>jopt-simple</artifactId>-->
<!--            <version>5.0.4</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.6</version>
        </dependency>
        <!-- endregion jCPP -->

<!--        <dependency>-->
<!--            <groupId>org.apache.commons</groupId>-->
<!--            <artifactId>commons-collections4</artifactId>-->
<!--            <version>4.3</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.ini4j</groupId>
            <artifactId>ini4j</artifactId>
            <version>0.5.4</version>
        </dependency>

        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.25.2</version>
        </dependency>
    </dependencies>
</project>